custos-utilities/k8-deployment-scripts/vault/vault/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
   - hosts:
     - HOST_NAME
     secretName: tls-vault-secret

  rules:
   - host: HOST_NAME
     http:
      paths:
      - path: /
        backend:
          serviceName: vault
          servicePort: 8200
